--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,7 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Delius&family=Kufam:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Exo+2:ital@1&family=Itim&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
